--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,9 @@
 ---
 galaxy_info:
-  author: your name
-  description: your description
-  company: your company (optional)
+  role_name: knora-stack
+  author: dhlab-basel
+  description: Knora-Stack
+  company: Digital Humanities Lab, University of Basel
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -15,7 +16,7 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
+  license: GPLv3
 
   min_ansible_version: 1.2
 
