--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
     - ROLE_NAME: knora-stack
   matrix:
     - MOLECULE_DISTRO: centos7
-    - MOLECULE_DISTRO: ubuntu1804
+    # - MOLECULE_DISTRO: ubuntu1804
 
 install:
   # Install test dependencies.
